<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/colorbar_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="2sp"
        android:layout_marginLeft="4sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_fomula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textColor="#ff000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/lbl_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Large Text"
            android:textColor="#ff000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:background="@drawable/colorbar_answer"
            android:text="@string/strres_answer"
            android:textColor="#ff000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:layout_margin="4sp"
            android:text="@string/strres_clear"
            android:background="@drawable/colorbar_clear"
            android:textColor="#ff000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:layout_margin="4sp"
            android:text="@string/strres_pass"
            android:background="@drawable/colorbar_pass"
            android:textColor="#ff000000"
            android:textSize="20sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="7"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="9"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="2dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_4"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="6"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_1"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_margin="4sp"
                android:background="@drawable/colorbar_cycle"
                android:textColor="#ffffffff"
                android:text="3"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_0"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:text="0"
            android:layout_margin="4sp"
            android:background="@drawable/colorbar_cycle"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_hint1"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:background="@drawable/colorbar_hint"
            android:text="@string/strres_hint1"
            android:textColor="#ff000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_hint2"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:layout_margin="4sp"
            android:background="@drawable/colorbar_hint"
            android:textColor="#ff000000"
            android:text="@string/strres_hint2"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_scale"
        android:layout_width="fill_parent"
        android:layout_height="32px"
        android:src="@android:drawable/btn_star" />

    <ImageView
        android:id="@+id/img_hint1_a"
        android:layout_width="fill_parent"
        android:layout_height="48px"
        android:src="@android:drawable/btn_star" />

    <ImageView
        android:id="@+id/img_hint1_a2"
        android:layout_width="fill_parent"
        android:layout_height="96px"
        android:src="@android:drawable/btn_star" />
    
    <ImageView
        android:id="@+id/img_hint1_b"
        android:layout_width="fill_parent"
        android:layout_height="48px"
        android:src="@android:drawable/btn_star" />

</LinearLayout>
